[package]
name = "git-mix"
version = "0.1.0"
authors = ["detailyang <detailyang@gmail.com>"]
description = "Mix the git data with AES-256-ECB mode"
license = "MIT"
license-file = "LICENSE"

[badges]
travis-ci = { repository = "...", branch = "master" }

[dependencies]
rust-crypto = "0.2"
rand = "0.3.16"
clap = "2.26.0"
base64 = "~0.6.0"

[lib]
name = "mix"
path = "src/lib.rs"

[[bin]]
name = "git-mix"
path = "src/main.rs"
